--- a/src/agent/CMakeLists.txt
+++ b/src/agent/CMakeLists.txt
@@ -3,3 +3,6 @@ include_directories(include)
 file(GLOB sources src/*.cpp)
 
 add_executable(agent ${sources})
+
+target_link_libraries(agent PRIVATE config)
+target_link_libraries(agent PRIVATE logger)
