feat: C++ implementation of Logcollector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(LOG_PATH "agent.log")
+set(BUFFER_SIZE 4096)
 
 add_subdirectory(src)
