--- a/src/agent/CMakeLists.txt
+++ b/src/agent/CMakeLists.txt
@@ -9,3 +9,4 @@ add_executable(agent ${sources})
 target_link_libraries(agent PRIVATE config)
 target_link_libraries(agent PRIVATE logger)
 target_link_libraries(agent PRIVATE logcollector)
+target_link_libraries(agent PRIVATE yaml)
