feat: C++ implementation of the FIM module

--- a/src/agent/CMakeLists.txt
+++ b/src/agent/CMakeLists.txt
@@ -1,12 +1,14 @@
 include_directories(include)
 
 find_package(cJSON REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 file(GLOB sources src/*.cpp)
 
 add_executable(agent ${sources})
 
 target_link_libraries(agent PRIVATE config)
+target_link_libraries(agent PRIVATE fim)
 target_link_libraries(agent PRIVATE logger)
 target_link_libraries(agent PRIVATE logcollector)
 target_link_libraries(agent PRIVATE yaml)
