--- a/src/shared/config/include/config.h.in
+++ b/src/shared/config/include/config.h.in
@@ -3,3 +3,5 @@
 #define LOG_PATH "@LOG_PATH@"
 #define BUFFER_SIZE @BUFFER_SIZE@
 #define CONFIG_PATH "@CONFIG_PATH@"
+#define FIM_SIZE_LIMIT @FIM_SIZE_LIMIT@
+#define FIM_MAX_FILES @FIM_MAX_FILES@
